[tool.poetry]
name = "gh-kk-cf-django-backend"
version = "0.1.0"
description = ""
authors = ["hyukjunkim1116 <nmkk1234@naver.com>"]
readme = "README.md"
packages = [{include = "gh_kk_cf_django_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
djangorestframework = "^3.14.0"
requests = "^2.30.0"
simplejwt = "^2.0.1"
django-cors-headers = "^4.0.0"
environ = "^1.0"
django-environ = "^0.10.0"
djangorestframework-simplejwt = "^5.2.2"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}
sentry-sdk = "^1.23.1"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
